--- a/templates/base.html
+++ b/templates/base.html
@@ -104,6 +104,87 @@
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
         </ul>
       </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
+        <div class="col-6 col-md">
+        <h5><ya-tr-span data-index="46-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resources" data-translation="Ресурсы" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="47-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource" data-translation="Ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="48-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Resource name" data-translation="Название ресурса" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="49-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Another resource" data-translation="Другой ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#"><ya-tr-span data-index="50-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Final resource" data-translation="Конечный ресурс" data-ch="0" data-type="trSpan" style="visibility: inherit !important;"></ya-tr-span></a></li>
+        </ul>
+      </div>
       <div class="col-6 col-md">
         <h5><ya-tr-span data-index="51-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="About" data-translation="О нас" data-ch="0" data-type="trSpan" style="visibility: inherit !important;">О нас</ya-tr-span></h5>
         <ul class="list-unstyled text-small">
@@ -113,8 +194,8 @@
             <style>
 
             .my__tg {
-    height: 64px;
-    width: 64px;
+    height: 50px;
+    width: 50px;
     border-radius: 100px;
 }
 
