--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ L-store
             <div class="col">
 
                 <div class="card shadow-sm h-100"> <!-- Добавлен класс h-100 -->
-                    <img src="https://i.pinimg.com/736x/12/de/2f/12de2fc562c431ca95571f8c38ee6378.jpg" class="card-img-top" width="100%" height="225">
+                    <img src="https://i.pinimg.com/736x/12/de/2f/12de2fc562c431ca95571f8c38ee6378.jpg" class="photo" width="100%" height="225">
                     <center>
                         <text class="name1">Лапка</text>
                         <style>
@@ -21,6 +21,13 @@ L-store
                                 font-weight: bold;
                                 font-size: 24px;
                             }
+                            .photo {
+                                background-color: black;
+                                transition: transform 0.3s ease; /* Плавный переход */
+                             }
+                            .photo:hover {
+                                transform: scale(1.05); /* Увеличение изображения при наведении */}
+
                         </style>
                     </center>
                     <div class="card-body">
@@ -36,6 +43,7 @@ L-store
                              color: grey;
                              text-align: center;
                              font-size: 18px
+
                           }
                       </style>
                             </div>
@@ -49,7 +57,7 @@ L-store
 
             <div class="col">
                 <div class="card shadow-sm h-100"> <!-- Добавлен класс h-100 -->
-                    <img src="https://i.pinimg.com/736x/5d/2b/5e/5d2b5e7b69b933576e0ea72f2a69b04f.jpg" class="card-img-top" width="100%" height="225">
+                    <img src="https://i.pinimg.com/736x/5d/2b/5e/5d2b5e7b69b933576e0ea72f2a69b04f.jpg" class="photo" width="100%" height="225">
                     <center>
                         <text class="name1">Маска квадробера</text>
                     </center>
@@ -80,7 +88,7 @@ L-store
 
             <div class="col">
                 <div class="card shadow-sm h-100"> <!-- Добавлен класс h-100 -->
-                    <img src="https://i.pinimg.com/control2/736x/e4/f9/5d/e4f95dde2e29e4abdf082673b276923f.jpg" class="card-img-top" width="100%" height="225">
+                    <img src="https://i.pinimg.com/control2/736x/e4/f9/5d/e4f95dde2e29e4abdf082673b276923f.jpg" class="photo" width="100%" height="225">
                     <center>
                         <text class="name1">Крипер</text>
                         <style>
@@ -115,7 +123,7 @@ L-store
 
             <div class="col">
                 <div class="card shadow-sm h-100"> <!-- Добавлен класс h-100 -->
-                    <img src="https://i.pinimg.com/736x/37/08/4b/37084b2770dc23ab98fc414c75633861.jpg" class="card-img-top" width="100%" height="225">
+                    <img src="https://i.pinimg.com/736x/37/08/4b/37084b2770dc23ab98fc414c75633861.jpg" class="photo" width="100%" height="225">
                     <center>
                         <text class="name1">Унитаз</text>
                         <style>
@@ -151,7 +159,7 @@ L-store
 
             <div class="col">
                 <div class="card shadow-sm h-100"> <!-- Добавлен класс h-100 -->
-                    <img src="https://i.pinimg.com/control2/736x/b5/f6/ef/b5f6ef3693b2e606b8d4bf5be0ed9370.jpg" class="card-img-top" width="100%" height="225">
+                    <img src="https://i.pinimg.com/control2/736x/b5/f6/ef/b5f6ef3693b2e606b8d4bf5be0ed9370.jpg" class="photo" width="100%" height="225">
                     <center>
                         <text class="name1">Хомяк-уничтожитель</text>
                         <style>
@@ -186,7 +194,7 @@ L-store
 
              <div class="col">
                 <div class="card shadow-sm h-100"> <!-- Добавлен класс h-100 -->
-                    <img src="https://i.pinimg.com/736x/cc/a7/a9/cca7a9383c440915e4e2cfb6e781c042.jpg" class="card-img-top" width="100%" height="225">
+                    <img src="https://i.pinimg.com/736x/59/bc/11/59bc11efe52382df787536e2567afdf8.jpg" class="photo" width="100%" height="225">
                     <center>
                         <text class="name1">Бог</text>
                         <style>
